Update nama gambar

--- a/product-tab.html
+++ b/product-tab.html
@@ -13,19 +13,19 @@
     <div class="product-wrap">
         <div class="product-images">
             <div class="product-image-item" id="option1image">
-                <img src="image/BeigiMotor.png"/>
+                <img src="image/beigimotor.png"/>
             </div>
             <div class="product-image-item" id="option2image">
-<img src="image/GreenMotor.png"/>
+<img src="image/greenmotor.png"/>
 </div>
 <div class="product-image-item" id="option3image">
-    <img src="image/OrangeMotor290423.png"/>
+    <img src="image/orangemotor290423.png"/>
 </div>
 <div class="product-image-item" id="option4image">
-    <img src="image/RedMotor.png"/>
+    <img src="image/redmotor.png"/>
 </div>            
 <div class="product-image-item" id="option5image">
-    <img src="image/TurquousBlueMotor.png"/>
+    <img src="image/turquousbluemotor.png"/>
     </div>
 </div>
 <ul id="options" class="product-colors">
